# engin

./: .readthedocs.yaml  CHANGELOG.md  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: benchmark-main.yaml  benchmark-pr.yaml  benchmark.yaml  check.yaml  publish.yaml
benchmarks/: assembler.py
dev/bench/: data.js
docs/: cli.md  conf.py  index.md  index.rst  mkdocs.yaml
docs/concepts/: blocks.md  engin.md  invocations.md  lifecycle.md  modifiers.md  providers.md
docs/source/: conf.py
examples/asgi/: app.py  main.py
src/engin/: __init__.py  _assembler.py  _block.py  _container.py  _dependency.py  _engin.py  _introspect.py  _lifecycle.py  _module.py  _option.py  _supervisor.py  _type_utils.py  _types.py  _utils.py  exceptions.py
src/engin/_cli/: _check.py  _graph.html  _graph.py  _inspect.py
src/engin/cli/: __init__.py  _utils.py  graph.py
src/engin/ext/: asgi.py  fastapi.py
src/engin/extensions/: asgi.py  fastapi.py
tests/: deps.py  test_assembler.py  test_block.py  test_dependencies.py  test_engin.py  test_graph.py  test_invoke.py  test_lifecycle.py  test_modules.py  test_provide.py  test_supervisor.py  test_utils.py
tests/acceptance/: test_error_in_runtime.py  test_error_in_shutdown.py  test_error_in_start_up.py  test_error_in_supervised_task.py  test_error_in_task.py  test_fastapi.py
tests/benchmarks/: test_bench_assembler.py
tests/cli/: test_check.py  test_graph.py
