[project]
name = "engin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.2",
    "mypy>=1",
    "pytest-asyncio>=0.24.0",
    "pytest>=8",
    "ruff>=0",
]

[tool.ruff]
line-length = 95
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "RUF"]
ignore = []

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"